--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,6 @@
     </style>
 </head>
 <body>
-    <embed src="./resources/Prithee_Resume.pdf" width="100%" height="100%"/>
+    <embed src="assets/resources/Prithee_Resume.pdf" width="100%" height="100%"/>
 </body>
 </html>
